ros2_ws/log/build_2023-11-30_08-33-48/mypkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/sakutoshirasawa/ros2_ws/install/mypkg/lib/python3.10/site-packages/mypkg/talker.py", line 7
    pub = node.create_publisher(Person,, "person", 10)
                                       ^
SyntaxError: invalid syntax

